--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -12,19 +12,20 @@
 
 
 @var range customFontSize              "⚙️ Font-Size (Beta)" [10, 10, 16, 1, 'px']
-@var checkbox idontKnowWhatToNameThis  "🥶 Videol Lists (Beta)" 0
+@var checkbox idontKnowWhatToNameThis  "🥶 Video Lists (Beta)" 0
 
 @var select customOldLayout            "⚒️ Old Layout" ["Enabled", "Disabled"]
 @var checkbox oldBackground            "  🖼️ Old Background" 1
 @var checkbox oldPlaylists             "  ▶️ Old Playlists" 1
 @var checkbox oldIcons                 "  🧓 Old Icons" 0
 
-@var select customMoreVideos           "⚒️ Video Appearance" ["Disabled", "Enabled"]
+@var select customMoreVideos           "⚒️ Video Appearance" ["Enabled", "Disabled"]
 @var range videoPerRow                 "  ⚙️ Videos Per Rows" [5, 1, 15, 1]
 @var checkbox hideProfile              "  🫣 Hide Channel Profile" 1
 
 @var checkbox subscriptionsGrid        "  🔔 Subscriptions Grid" 1
 @var select homePage                   "  🏠 Home Page" ["Enabled", "Disabled"]
+@var checkbox homePageLayoutFix        "    ↳ Layout fix" 1
 @var checkbox playlistsGrouping        "    ↳ Playlists Grouping" 0
 @var select channelPage                "  📺 Channel Page" ["Enabled", "Disabled"]
 @var checkbox sortByOldest             "    ↳ Sort By Oldest" 0
@@ -116,14 +117,20 @@ Support me: https://ko-fi.com/sapondanaisriwan
     i=!important;
     t=transparent;
 
-    test() {
+    defaultMargin() {
+        margin-left: calc(var(--ytd-rich-grid-item-margin)/2);
+        margin-right: calc(var(--ytd-rich-grid-item-margin)/2);
+        margin-bottom: 40px;
+    }
+
+    fixYoutubeLayout() {
         ytd-rich-grid-row,
         ytd-rich-grid-row #contents {
             display: contents;
         }
 
-        #contents > ytd-rich-item-renderer {
-            margin: 0 4px 24px 4px i;
+        #contents > ytd-rich-item-renderer:not([is-shorts-grid]) {
+            defaultMargin();
         }
     }
 
@@ -188,7 +195,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
     }
 
     /* Fixed when zoom out and a blank box caused by Adblock */
-    if (customMoreVideos=="Disabled") || (homePage=="Disabled"){
+    if (customMoreVideos=="Disabled") || (homePage=="Disabled") {
         [page-subtype="home"] {
             ytd-rich-grid-row,
             ytd-rich-grid-row #contents.ytd-rich-grid-row {
@@ -211,13 +218,17 @@ Support me: https://ko-fi.com/sapondanaisriwan
                 ytd-rich-grid-renderer {
                     --ytd-rich-grid-items-per-row: var(--video-per-row) i;
                     #contents {
-                        test();
+                        fixYoutubeLayout();
                     }
                 }
 
                 #contents.ytd-rich-grid-renderer {
-                    width: calc(100% - 1.6rem);
+                    width: calc(100% - 2 * 1vw);
                     max-width: calc(var(--ytd-rich-grid-items-per-row) * (var(--ytd-rich-grid-item-max-width) + var(--ytd-rich-grid-item-margin)));
+                }
+
+                ytd-rich-section-renderer {
+                    display: none if homePageLayoutFix;
                 }
             }
 
@@ -246,7 +257,6 @@ Support me: https://ko-fi.com/sapondanaisriwan
             /* Display unloaded videos per row when refresh the homepage */
             #home-page-skeleton .rich-shelf-videos .rich-grid-media-skeleton.mini-mode,
             #home-page-skeleton #home-container-media .rich-grid-media-skeleton.mini-mode {
-                margin: 0 4px;
                 min-width: calc(100% / var(--video-per-row) - 1.6rem);
                 max-width: calc(100% / var(--video-per-row) - 1.6rem);
             }
@@ -551,7 +561,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
                 ytd-playlist-renderer,
                 ytd-video-renderer,
                 ytd-item-section-renderer {
-                    margin: 0 4px 24px 4px i;
+                    defaultMargin();
                 }
 
                 ytd-radio-renderer,
@@ -767,7 +777,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
                 --ytd-rich-grid-items-per-row: var(--video-per-row) i;
                 /* Set to be treated as if they were the children of their parent element */
                 #contents {
-                    test();
+                    fixYoutubeLayout();
                 }
             }
 
@@ -1043,7 +1053,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
                 ytd-rich-grid-renderer {
                     /* Set to be treated as if they were the children of their parent element */
                     #contents {
-                        test();
+                        fixYoutubeLayout();
                     }
                 }
             }
@@ -1528,7 +1538,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
             margin-right: 0;
             margin-left: 0;
             letter-spacing: normal;
-
+            text-align: center;
             /* It's very hard to read so I made a full condition below */
             border-radius: 18px if (customRoundness=="Disabled");
             border-radius: buttonRadius <=2px ? 2px i: buttonRadius i if (customRoundness=="Enabled");
@@ -2967,7 +2977,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
         }
 
         ytd-item-section-renderer {
-            margin: 0 4px 24px 4px i;
+            defaultMargin();
         }
 
         /* 3 dot */
