--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           `AdashimaaTube
 @author         sapondanaisriwan <sapondanaisriwan@gmail.com> (https://github.com/sapondanaisriwan)
-@description    Please report bugs via github issues or my email (If I have some free time, I'll fix them)
+@description    If you want to submit a bug or request a feature please report via github issue. Since I receive so many emails, I can't reply to them all.
 @namespace      https://userstyles.world/user/sapondanaisriwan
 @homepageURL    https://github.com/sapondanaisriwan/AdashimaaTube
 @supportURL     https://github.com/sapondanaisriwan/AdashimaaTube/issues
